--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "bootstrap": "^5.3.0",
     "chart.js": "^4.4.1",
+    "jquery": "^3.7.1",
     "ngx-toastr": "^18.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
