--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@angular/cdk": "^16.2.13",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
+    "@angular/core": "^16.2.12",
     "@angular/forms": "^16.0.0",
     "@angular/material": "^16.2.13",
-    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@fortawesome/angular-fontawesome": "^0.13.0",
@@ -31,12 +31,12 @@
     "ngx-toastr": "^18.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.2",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.0",
-    "@angular/cli": "~16.0.0",
+    "@angular/cli": "^16.2.11",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
