--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.2.12",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^16.0.0",
     "@angular/material": "^16.2.13",
     "@angular/platform-browser": "^16.2.12",
@@ -25,7 +26,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "jquery": "^3.7.1",
     "ngx-toastr": "^18.0.0",
