--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.7.1",
     "ngx-toastr": "^18.0.0",
     "popper.js": "^1.16.1",
+    "primeng": "^17.3.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
     "zone.js": "~0.13.0"
@@ -47,6 +48,5 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~5.0.2"
-    
   }
 }
