--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@types/serialport": "^8.0.5",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
+    "date-fns": "^3.2.0",
     "jquery": "^3.7.1",
     "ngx-toastr": "^18.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
+    "web-serial-polyfill": "^1.0.15",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
