--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "date-fns": "^3.2.0",
+    "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
     "jspdf-autotable": "^3.8.1",
     "ngx-toastr": "^18.0.0",
@@ -39,6 +40,7 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
     "web-serial-polyfill": "^1.0.15",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
