--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "date-fns": "^3.2.0",
     "jquery": "^3.7.1",
     "jspdf-autotable": "^3.8.1",
+    "ngx-filesaver": "^17.0.0",
     "ngx-toastr": "^18.0.0",
     "ngx-webcam": "^0.4.1",
     "popper.js": "^1.16.1",
-    "primeng": "^17.3.3",
+    "primeng": "^17.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
     "web-serial-polyfill": "^1.0.15",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
