--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,15 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "typeRoots": [
+      "./src/app/WebSdk",
+      "./node_modules/@types"
+    ],
+    "types": ["./src/app/WebSdk"],
+    "allowJs": true
   },
+  "include": ["./src/app/WebSdk"],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
