--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "^16.0.0",
     "@angular/cdk": "^16.2.13",
     "@angular/common": "^16.0.0",
