--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@types/axios": "^0.14.0",
     "@types/serialport": "^8.0.5",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "date-fns": "^3.2.0",
