--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^16.0.0",
     "@digitalpersona/devices": "^0.2.6",
     "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
@@ -37,10 +38,12 @@
     "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
     "jspdf-autotable": "^3.8.1",
+    "jszip": "^3.10.1",
     "ngx-filesaver": "^17.0.0",
     "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^18.0.0",
     "ngx-webcam": "^0.4.1",
+    "pako": "^2.1.0",
     "popper.js": "^1.16.1",
     "primeng": "^17.4.0",
     "rxjs": "~7.8.0",
@@ -56,6 +59,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "@types/jspdf": "^2.0.0",
+    "@types/pako": "^2.0.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
