--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "@types/serialport": "^8.0.5",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
-    "chart.js": "^4.4.1",
+    "chart.js": "^4.4.2",
     "date-fns": "^3.2.0",
     "file-saver": "^2.0.5",
+    "gapi-client": "^0.0.3",
     "jquery": "^3.7.1",
     "jspdf-autotable": "^3.8.1",
     "jszip": "^3.10.1",
+    "ng2-charts": "^5.0.4",
     "ngx-filesaver": "^17.0.0",
     "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^18.0.0",
