--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@angular/service-worker": "^16.2.12",
     "@digitalpersona/devices": "^0.2.6",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
@@ -35,6 +36,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.2",
     "date-fns": "^3.2.0",
+    "dexie": "^4.0.4",
     "file-saver": "^2.0.5",
     "gapi-client": "^0.0.3",
     "jquery": "^3.7.1",
