--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "jquery": "^3.7.1",
     "jspdf-autotable": "^3.8.1",
     "jszip": "^3.10.1",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "ng2-charts": "^5.0.4",
     "ngx-filesaver": "^17.0.0",
     "ngx-spinner": "^16.0.2",
