--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@swimlane/ngx-charts": "^20.5.0",
     "@types/axios": "^0.14.0",
     "@types/serialport": "^8.0.5",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.2",
+    "d3": "^7.9.0",
     "date-fns": "^3.2.0",
     "dexie": "^4.0.4",
     "file-saver": "^2.0.5",
@@ -62,6 +64,9 @@
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular/cli": "^16.2.11",
     "@angular/compiler-cli": "^16.0.0",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-selection": "^3.0.10",
+    "@types/d3-shape": "^3.1.6",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "@types/jspdf": "^2.0.0",
